--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "framer-motion": "^10.16.4",
     "next": "13.5.6",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-toastify": "^9.1.3",
+    "zustand": "^4.4.4"
   },
   "devDependencies": {
     "@types/node": "^20",
