--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "framer-motion": "^10.16.4",
     "next": "13.5.6",
     "react": "^18",
+    "react-datepicker": "^4.21.0",
     "react-dom": "^18",
     "react-toastify": "^9.1.3",
     "zustand": "^4.4.4"
