--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-datepicker": "^4.21.0",
     "react-dom": "^18",
     "react-toastify": "^9.1.3",
+    "recharts": "^2.9.1",
     "zustand": "^4.4.4"
   },
   "devDependencies": {
